# cli-officer

./: README.md  pyproject.toml
scripts/: bootstrap_tmux.sh  install_cli_officer.sh
src/cli_officer/: __init__.py  cli.py  config.py  detector.py  launcher.py  llm.py  models.py  policy.py  supervisor.py  tmux.py
tests/: test_supervisor.py
